--- a/src/main/resources/templates/includes/user/bottom.html
+++ b/src/main/resources/templates/includes/user/bottom.html
@@ -1,3 +1,10 @@
+<script>
+    function toggleMenu() {
+        const nav = document.querySelector('.header__nav');
+        nav.classList.toggle('active');
+    }
+</script>
+
 <!-- CUSTOM JS!!! -->
 <script src="https://staticfile-three.vercel.app/common/js/default.js"></script>
 <script src="https://staticfile-three.vercel.app/common/js/user.js"></script>
