--- a/src/main/resources/templates/includes/user/head.html
+++ b/src/main/resources/templates/includes/user/head.html
@@ -1,20 +1,18 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>CLAIRA</title>
-    <link rel="icon" type="image/x-icon" href="https://staticfile-three.vercel.app/frontrewardquiz/img/logo.png">
+    <title>한동대학교 SW중심대학</title>
+    <link rel="icon" type="image/x-icon" href="/frontswcenter/img/footer_logo.png">
 
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <link rel="stylesheet" href="/frontswcenter/css/header.css">
+    <link rel="stylesheet" href="/frontswcenter/css/footer.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
+    <script src="/frontswcenter/js/carousel.js" defer></script>
 
     <!-- CUSTOM JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -22,12 +20,6 @@
 
     <!-- CUSTOM CSS -->
     <link href="https://staticfile-three.vercel.app/common/css/style.css" rel="stylesheet">
-
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        }
-    </style>
 </head>
 
 <script type="text/javascript">
@@ -52,8 +44,6 @@
         } else {
             //확인 필요 없음.
         }
-
-        //alert(is_able);
         if(is_able){
             if(!isNull(obj_href)){
                 location.href = obj_href;
@@ -61,7 +51,8 @@
                 return true;
             }
         } else {
-            showPopup('login', null);
+            //로그인 안되어 있을때, 특정하게 실행해야 하는 것
+            //showPopup('login', null);
             return false;
         }
     }
