--- a/src/main/resources/templates/includes/admin/topbar.html
+++ b/src/main/resources/templates/includes/admin/topbar.html
@@ -8,6 +8,12 @@
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/index">
+                <i class="fas fa-home fa-fw mr-1"></i>
+                Main Site
+            </a>
+        </li>
 
         <!-- Nav Item - Alerts -->
         <li class="nav-item dropdown no-arrow mx-1">
