--- a/src/main/resources/templates/includes/user/aside.html
+++ b/src/main/resources/templates/includes/user/aside.html
@@ -1,8 +1,17 @@
 <aside class="aside-nav">
     <ul>
+        <li><a href="/introduction/mission" class="a_aside_nav a_aside_nav_introduction a_aside_nav_introduction_1">사업단 목표</a></li>
+        <li><a href="/introduction/organization" class="a_aside_nav a_aside_nav_introduction a_aside_nav_introduction_2">조직도</a></li>
+        <li><a href="/introduction/business_support" class="a_aside_nav a_aside_nav_introduction a_aside_nav_introduction_3">기업 지원 센터</a></li>
+        <li><a href="/introduction/location" class="a_aside_nav a_aside_nav_introduction a_aside_nav_introduction_4">오시는길</a></li>
+
+        <li><a href="/value-spread/support_project" class="a_aside_nav a_aside_nav_value-spread a_aside_nav_value-spread_1">지원 프로젝트</a></li>
+        <li><a href="/value-spread/operation_status" class="a_aside_nav a_aside_nav_value-spread a_aside_nav_value-spread_2">운영 현황</a></li>
+        <li><a href="/value-spread/sw_education" class="a_aside_nav a_aside_nav_value-spread a_aside_nav_value-spread_3">SW교육</a></li>
+
         <li><a href="/notice/list" class="a_aside_nav a_aside_nav_news a_aside_nav_news_1">공지사항</a></li>
-        <li><a href="/newsletter/intro" class="a_aside_nav a_aside_nav_news a_aside_nav_news_2">뉴스레터</a></li>
-        <li><a href="/activity/list" class="a_aside_nav a_aside_nav_news a_aside_nav_news_3">대외활동</a></li>
+        <li><a href="/news/news_letter" class="a_aside_nav a_aside_nav_news a_aside_nav_news_2">뉴스레터</a></li>
+        <li><a href="/news/extracurricular_activities" class="a_aside_nav a_aside_nav_news a_aside_nav_news_3">대외활동</a></li>
 
         <li><a href="/board/list" class="a_aside_nav a_aside_nav_board a_aside_nav_board_1">일반 게시판</a></li>
     </ul>
