--- a/src/main/resources/templates/includes/user/header.html
+++ b/src/main/resources/templates/includes/user/header.html
@@ -3,9 +3,11 @@
     <div class="topbar">
         <div class="topbar__inner">
             <nav class="topbar__nav">
-                <a href="/index">HOME</a>
+                <a href="/index" class="topbar__link">HOME</a>
                 <span class="divider">|</span>
-                <a href="https://handong.edu/">한동대학교</a>
+                <a href="https://handong.edu/" class="topbar__link">한동대학교</a>
+                <a href="/user/login" class="topbar__login" id="topbar_login_link">로그인</a>
+                <a href="#" class="topbar__login" id="topbar_logout_link" onclick="logout_user(); return false;">로그아웃</a>
             </nav>
         </div>
     </div>
@@ -27,23 +29,23 @@
         <nav class="header__nav">
             <ul class="main-menu">
                 <li>
-                    <a href="introduction/mission.html" class="main-link">사업단 소개</a>
+                    <a href="/introduction/mission" class="main-link">사업단 소개</a>
                     <div class="mega-dropdown">
                         <div class="menu-column">
-                            <a href="introduction/mission.html">사업단 목표</a>
-                            <a href="introduction/organization.html">조직도</a>
-                            <a href="introduction/business_support.html">기업 지원 센터</a>
-                            <a href="introduction/location.html">오시는길</a>
+                            <a href="/introduction/mission">사업단 목표</a>
+                            <a href="/introduction/organization">조직도</a>
+                            <a href="/introduction/business_support">기업 지원 센터</a>
+                            <a href="/introduction/location">오시는길</a>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <a href="value-spread/support_project.html" class="main-link">SW가치확산</a>
+                    <a href="/value-spread/support_project" class="main-link">SW가치확산</a>
                     <div class="mega-dropdown">
                         <div class="menu-column">
-                            <a href="value-spread/support_project.html">지원 프로젝트</a>
-                            <a href="value-spread/operation_status.html">운영 현황</a>
-                            <a href="value-spread/sw_education.html">SW교육</a>
+                            <a href="/value-spread/support_project">지원 프로젝트</a>
+                            <a href="/value-spread/operation_status">운영 현황</a>
+                            <a href="/value-spread/sw_education">SW교육</a>
                         </div>
                     </div>
                 </li>
@@ -52,8 +54,8 @@
                     <div class="mega-dropdown">
                         <div class="menu-column">
                             <a href="/notice/list">공지사항</a>
-                            <a href="news/news_letter.html">뉴스레터</a>
-                            <a href="news/extracurricular_activities.html">대외활동</a>
+                            <a href="/news/news_letter">뉴스레터</a>
+                            <a href="/news/extracurricular_activities">대외활동</a>
                         </div>
                     </div>
                 </li>
