--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-    <link rel="icon" href="/common/img/img_transparent.png" />
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
+<th:block th:replace="~{includes/user/head}" />
+<link rel="stylesheet" href="/frontswcenter/css/login.css">
 <body>
 
-login
-<div>
-    username : <input type="text" id="input_user_username" name="username" class="input_create"/> <br/>
-    password : <input type="password" id="input_user_password" name="password" class="input_create"/> <br/>
-    <button onclick="loginUser()">로그인</button>
+<th:block th:replace="~{includes/user/header}" />
+
+<div class="login-page">
+    <main class="login-shell">
+        <section class="login-intro">
+            <h1 class="login-hero-title">Handong SW University</h1>
+            <p class="login-hero-subtitle">교육 · 연구 · 협력 · 실무를 연결합니다</p>
+        </section>
+
+        <section class="login-card">
+            <h2 class="login-card-title">로그인</h2>
+            <p class="login-card-desc">아이디와 비밀번호를 입력하세요.</p>
+
+            <div class="login-field">
+                <label for="input_user_username">아이디</label>
+                <input type="text" id="input_user_username" name="username" class="input_create" autocomplete="username" />
+            </div>
+            <div class="login-field">
+                <label for="input_user_password">비밀번호</label>
+                <input type="password" id="input_user_password" name="password" class="input_create" autocomplete="current-password" />
+            </div>
+            <button type="button" class="login-button" onclick="loginUser()">로그인</button>
+        </section>
+    </main>
 </div>
+
+<th:block th:replace="~{includes/user/footer}" />
+<th:block th:replace="~{includes/user/bottom}" />
 
 <script>
     function loginUser(){
